// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple.md 1`] = `
[alpha]: http://example.com
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[alpha]: http://example.com

`;

exports[`title.md 1`] = `
[alpha]: http://example.com "title"
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[alpha]: http://example.com "title"

`;
